# aff3D

./: .travis.yml  CMakeLists.txt  IO.cpp  IO.h  Makefile  README.rst  aff3d  aff3d.cpp  aff3d.cpp~  format.sh  gmon.out  run_clang-tidy.sh  run_scan-build.sh  transfo.cpp  transfo.h  triangle.cpp  triangle.h  vertex.cpp  vertex.cpp~  vertex.h  vertex.h~
data/: butterfly.stl
include/: IO.h  Rasterizer.h  SDLWrapper.h  SurfaceWrapper.h  normal.hpp  rasterizer.h  surfaceWrapper.h  transfo.h  triangle.h  utils.h  vertex.h
include/IO/: ASCIISTLFile.h  FileParser.h  Trianglenormaliser.h  fileParser.h  triangleNormaliser.h
src/: IO.cpp  Rasterizer.cpp  SDLWrapper.cpp  SurfaceWrapper.cpp  aff3d.cpp  chronometer.hpp  normal.cpp  rasterizer.cpp  surfaceWrapper.cpp  transfo.cpp  triangle.cpp  vertex.cpp
src/IO/: ASCIISTLFile.cpp  ASCIISTLFile.h  BINSTLFile.cpp  BINSTLFile.h  FileParser.cpp  fileParser.cpp  fileParser.h  triangleNormaliser.h
tests/: ASCIISTLFile.cpp  CMakeLists.txt  normal.cpp  runTest.sh  runTests.sh  test.cpp
vstudio/: sdl2-config.cmake
